--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,10 @@ jobs:
 
     - name: Create user for ktra and login, then build and test
       run: |        
-        sleep 5
+        until curl --output /dev/null --silent --head --fail http://localhost:8000; do
+          echo "Waiting for server to start..."
+          sleep 5
+        done
         cd ${{ github.event.repository.name }}
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE | jq -r '.token')
         echo ${{ env.REGISTRY }}
