--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,9 +73,14 @@ jobs:
         ls -la ./target/debug/
         ./target/debug/ktra > ./ktra_output.txt 2>&1 &
         cd ..        
-        until curl --output /dev/null --silent --head --fail http://localhost:8000; do
+        timeout=120
+        while [ $timeout -gt 0 ]; do
+          if curl --output /dev/null --silent --head --fail http://localhost:8000; then
+            break
+          fi
           echo "Waiting for server to start..."
           sleep 5
+          ((timeout-=5))
         done
         cd ${{ github.event.repository.name }}
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE | jq -r '.token')
