try out new ktra-action and shell script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,149 +21,8 @@ jobs:
       with:
         path: ${{ github.event.repository.name }}
 
-    # Get registry name and repo link
-    - name: Get registry and repo
-      run: |
-        cd ${{ github.event.repository.name }}
-        REGISTRY=$(awk -F'=' '/\[registries\]/ {getline; print $1}' .cargo/config.toml | tr -d ' ')
-        REPO=$(grep -oP 'index = \K.*' .cargo/config.toml | tr -d '"' | awk -F/ '{print $(NF-1)"/"$NF}' | sed 's/\.git.*//')
-        echo "REGISTRY=$REGISTRY" >> $GITHUB_ENV        
-        echo "REPO=$REPO" >> $GITHUB_ENV        
-        cd ..
-    
-    - name: Print env variables
-      run: |
-        echo ${{ env.REPO }}
-        echo ${{ env.REGISTRY }}
-
-    # Checkout Registry
-    - name: Checkout Registry
-      uses: actions/checkout@v4
+    # Run ktra action
+    - name: Run ktra
+      uses: patrickoppel/ktra/.github/actions/ktra@main
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ env.REPO }}
-        ref: main
-        path: registry
-
-    # Checkout Ktra
-    - name: Checkout Ktra
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        repository: patrickoppel/ktra
-        ref: main
-        path: ktra
-
-    # Run Ktra
-    - name: Build Ktra
-      run: |
-        echo "${{ secrets.GITHUB_TOKEN }}" > ${{ github.workspace }}/ktra/github_token.txt
-        echo "
-        [index_config]
-        remote_url = 'https://github.com/Cube-OS/crates.git'
-        local_path = '${{ github.workspace }}/registry'
-        https_username = 'x-access-token'
-        https_password = '${{ secrets.GITHUB_TOKEN }}'
-        branch = 'main'
-        token_path = '${{ github.workspace }}/ktra/github_token.txt'
-        " > ${{ github.workspace }}/ktra/ktra.toml
-        cd ktra
-        cargo build --release > build_output.txt 2>&1 || echo "Build failed"
-        ./target/release/ktra > ./ktra_output.txt 2>&1 &
-        cd ..   
-        timeout=120
-        while [ $timeout -gt 0 ]; do
-          if curl --output /dev/null --silent --head --fail http://localhost:8000; then
-            break
-          fi
-          echo "Waiting for server to start..."
-          sleep 5
-          ((timeout-=5))
-        done
-        cd ${{ github.event.repository.name }}
-        TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE | jq -r '.token')
-        echo ${{ env.REGISTRY }}
-        cargo login --registry=${{ env.REGISTRY }} "$TOKEN"
-        cargo build --release
-        cargo test
-      continue-on-error: true
-
-    - name: print ktra build_output
-      run: |
-        cat ${{ github.workspace }}/ktra/build_output.txt
-        cat ${{ github.workspace }}/ktra/ktra_output.txt
-    
-      # Package
-    - name: package
-      run: |
-        cd ${{ github.event.repository.name }}
-        cargo package
-
-    # Get crate info
-    - name: Get crate info
-      id: crate_info
-      run: |
-        echo "{VERSION}=$(cargo read-manifest | jq -r .version)" >> $GITHUB_OUTPUT
-        echo "{NAME}=$(cargo read-manifest | jq -r .name)" >> $GITHUB_OUTPUT
-
-    # Upload package
-    - name: Upload package
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ steps.crate_info.outputs.NAME }}-${{ steps.crate_info.outputs.VERSION }}
-        path: ${{ github.event.repository.name }}/target/package/*.crate
-    
-    # - name: Get version
-    #   id: get_version
-    #   run: |
-    #     VERSION=$(grep "^version" Cargo.toml | cut -d' ' -f3 | tr -d '"')
-    #     echo "::set-output name=VERSION::${VERSION}"
-
-    # Check if tag exists
-    - name: Check if tag exists
-      id: check_tag
-      run: |
-        TAG_NAME="v${{ steps.crate_info.outputs.VERSION }}"
-        HTTP_STATUS=$(curl --silent --head --location "https://github.com/$GITHUB_REPOSITORY/releases/tag/$TAG_NAME" | grep HTTP | cut -d ' ' -f2)
-        if [ "$HTTP_STATUS" == "200" ]; then
-          echo "{EXISTS}={true}" >> $GITHUB_OUTPUT
-        else
-          echo "{EXISTS}={false}" >> $GITHUB_OUTPUT
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    # Create and push tag
-    - name: Create and push tag
-      if: steps.check_tag.outputs.EXISTS == 'false'
-      run: |
-        TAG_NAME="v${{ steps.crate_info.outputs.VERSION }}"
-        echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
-        git tag $TAG_NAME
-        git push origin ${{ env.TAG_NAME }}
-
-    # Create Release
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      if: steps.check_tag.outputs.EXISTS == 'false'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.crate_info.outputs.VERSION }}
-        release_name: Release ${{ steps.crate_info.outputs.VERSION }}
-        draft: false
-        prerelease: false
-
-    # Upload Package to Release
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      if: steps.check_tag.outputs.EXISTS == 'false'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: target/package/${{ steps.crate_info.outputs.NAME }}-${{ steps.crate_info.outputs.VERSION }}.crate
-        asset_name: ${{ steps.crate_info.outputs.NAME }}-${{ steps.crate_info.outputs.VERSION }}.crate
-        asset_content_type: application/octet-stream
+        github_token: ${{ secrets.GITHUB_TOKEN }}
