--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Release
 
 on:
   push:
-    branches:
-      - main # Trigger workflow on push to the main branch
+    tags:
+      - 'v*' # Trigger workflow on push to tags that start with 'v'
+    # branches:
+    #   - main # Trigger workflow on push to the main branch
 
 jobs:
   release:
